# crud-application

./: README.md  docker-compose.yml  pyproject.toml
src/backend/: Dockerfile  crud.py  database.py  main.py  models.py  router.py  schema.py
src/frontend/: app.py  requirements.txt
src/frontend/.streamlit/: config.toml
