[tool.poetry]
name = "crud-case-study"
version = "0.1.0"
description = ""
authors = ["Daniel Menna <danielribeiromenna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
